--- a/app/views/admin/pages/_form.html.haml
+++ b/app/views/admin/pages/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @page, url: { controller: 'admin/pages' }, :html => { :class => 'form-horizontal' } do |f|
+= form_for @page, :html => { :class => 'form-horizontal' } do |f|
   .control-group
     = f.label :name, :class => 'control-label'
     .controls
