--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -4,7 +4,7 @@
     %meta(charset="utf-8")
     %meta(http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1")
     %meta(name="viewport" content="width=device-width, initial-scale=1.0")
-    %title= content_for?(:title) ? yield(:title) : "KvpCms"
+    %title= content_for?(:title) ? yield(:title) : "高専ベンチャー CMS"
     = csrf_meta_tags
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
@@ -18,36 +18,41 @@
 
 
   %body
-    .navbar.navbar-fluid-top
+    .navbar.navbar-fluid-top.navbar-inverse
       .navbar-inner
         .container-fluid
           %a.btn.btn-navbar(data-target=".nav-collapse" data-toggle="collapse")
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
-          %a.brand(href="#") KvpCms
+          = link_to '高専ベンチャー', root_path, class: 'brand', target: '_blank'
           .container.nav-collapse
             %ul.nav
-              %li= link_to "Link 1", "/path1"
-              %li= link_to "Link 2", "/path2"
-              %li= link_to "Link 3", "/path3"
+              %li= icon_link_to "Dashboard", admin_path, 'icon-white icon-home'
+              %li.dropdown
+                %a.dropdown-toggle(data-toggle="dropdown" href="#")
+                  %i.icon-white.icon-file
+                  ページ管理
+                  %b.caret
+                %ul.dropdown-menu(role="menu" aria-labelledby="dLabel")
+                  %li= icon_link_to "一覧", pages_path, 'icon-list'
+                  %li.split
+                  %li= icon_link_to "作成", new_page_path, 'icon-pencil'
+                  %li= icon_link_to "カテゴリ管理", page_categories_path, 'icon-filter'
+              %li= icon_link_to 'ユーザ管理', users_path, 'icon-white icon-user'
 
     .container-fluid
-
       .row-fluid
         .span3
           .well.sidebar-nav
             %ul.nav.nav-list
-              %li.nav-header Sidebar
-              %li= link_to "Link 1", "/path1"
-              %li= link_to "Link 2", "/path2"
-              %li= link_to "Link 3", "/path3"
+              = yield(:sidebar)
         .span9
           = bootstrap_flash
           = yield
 
       %footer
-        %p &copy; Company 2013
+        %p &copy; Kosen Venture Project 2013
     /
       Javascripts
       \==================================================
