--- a/app/views/layouts/kvp.html.erb
+++ b/app/views/layouts/kvp.html.erb
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=1024px; initial-scale=0.5; maximum-scale=1.0;">
     <% end %>
 
-    <title><%= @page_title ? "#{@page_title} | #{@site_title}" : @site_title %></title>
+    <title><%= @page_title ? "#{@page_title}｜#{@site_title}" : @site_title %></title>
 
     <%= csrf_meta_tags %>
 
@@ -79,10 +79,10 @@
             </div>
             <div class="span6" style="text-align: right;">
               <a href="/about"><div id="menu_about"></div></a>
-              <a href="/event"><div id="menu_events"></div></a>
+              <a href="/events"><div id="menu_events"></div></a>
               <a href="/news"><div id="menu_news"></div></a>
               <a href="/contact"><div id="menu_contact"></div></a>
-              <a href="/people"><div id="menu_people"></div></a>
+              <a href="/staff"><div id="menu_people"></div></a>
             </div>
         </div>
 
