--- a/app/views/admin/pages/_form.html.haml
+++ b/app/views/admin/pages/_form.html.haml
@@ -1,36 +1,42 @@
-= form_for @page, :html => { :class => 'form-horizontal' } do |f|
+= form_for @page, html: { class: 'form-horizontal' } do |f|
   .control-group
-    = f.label :name, :class => 'control-label'
+    = f.label 'カテゴリ', class: 'control-label'
     .controls
-      = f.text_field :name, :class => 'text_field'
+      = f.collection_select :category_id, @categories, :id, :name,
+        { include_blank: 'なし' }
   .control-group
-    = f.label :title, :class => 'control-label'
+    = f.label '親ページ', class: 'control-label'
     .controls
-      = f.text_field :title, :class => 'text_field'
+      = f.collection_select :parent_id, @pages, :id, :title,
+        { include_blank: 'なし' }
   .control-group
-    = f.label :description, :class => 'control-label'
+    = f.label 'ページ名', class: 'control-label'
     .controls
-      = f.text_field :description, :class => 'text_field'
+      = f.text_field :name, class: 'input-large'
   .control-group
-    = f.label :body, :class => 'control-label'
+    = f.label 'タイトル', class: 'control-label'
     .controls
-      = f.text_field :body, :class => 'text_field'
+      = f.text_field :title, class: 'input-large'
   .control-group
-    = f.label :category_id, :class => 'control-label'
+    = f.label '説明文', class: 'control-label'
     .controls
-      = f.text_field :category_id, :class => 'text_field'
+      = f.text_area :description, class: 'text_field', style: 'width: 80%'
   .control-group
-    = f.label :author_id, :class => 'control-label'
+    = f.label '本文', class: 'control-label'
     .controls
-      = f.text_field :author_id, :class => 'text_field'
+      = f.text_area :body, class: 'text_field', rows: 10, style: 'width: 80%'
   .control-group
-    = f.label :published, :class => 'control-label'
+    = f.label '作成者', class: 'control-label'
     .controls
-      = f.text_field :published, :class => 'text_field'
+      = f.collection_select :author_id, @users, :id, :name
   .control-group
-    = f.label :published_at, :class => 'control-label'
+    = f.label '公開する', class: 'control-label'
     .controls
-      = f.text_field :published_at, :class => 'text_field'
+      = f.check_box :published
+  .control-group
+    = f.label '公開日時', class: 'control-label'
+    .controls
+      = f.datetime_select :published_at, {}, class: 'span2'
   .form-actions
-    = f.submit nil, :class => 'btn btn-primary'
-    = link_to t('.cancel', :default => t("helpers.links.cancel")), pages_path, :class => 'btn'
+    = f.submit '保存', class: 'btn btn-primary'
+    = link_to 'キャンセル', pages_path, class: 'btn'
