--- a/app/views/admin/pages/_form.html.haml
+++ b/app/views/admin/pages/_form.html.haml
@@ -1,42 +1,58 @@
-= form_for @page, html: { class: 'form-horizontal' } do |f|
-  .control-group
+= form_for @page, html: { id: "PageForm", class: 'form-horizontal' } do |f|
+  - if @page.errors.any?
+    .alert.alert-block.fade.in.alert-error
+      %h4 エラー
+      %ul
+        - @page.errors.full_messages.each do |msg|
+          %li= msg
+
+  %div{class: "control-group #{'error' unless @page.errors[:category_id].blank?}"}
     = f.label 'カテゴリ', class: 'control-label'
     .controls
       = f.collection_select :category_id, @categories, :id, :name,
         { include_blank: 'なし' }
-  .control-group
+
+  %div{class: "control-group #{'error' unless @page.errors[:parent_id].blank?}"}
     = f.label '親ページ', class: 'control-label'
     .controls
       = f.collection_select :parent_id, @pages, :id, :title,
         { include_blank: 'なし' }
-  .control-group
+
+  %div{class: "control-group #{'error' unless @page.errors[:name].blank?}"}
     = f.label 'ページ名', class: 'control-label'
     .controls
       = f.text_field :name, class: 'input-large'
-  .control-group
+
+  %div{class: "control-group #{'error' unless @page.errors[:title].blank?}"}
     = f.label 'タイトル', class: 'control-label'
     .controls
       = f.text_field :title, class: 'input-large'
-  .control-group
+
+  %div{class: "control-group #{'error' unless @page.errors[:description].blank?}"}
     = f.label '説明文', class: 'control-label'
     .controls
       = f.text_area :description, class: 'text_field', style: 'width: 80%'
-  .control-group
+
+  %div{class: "control-group #{'error' unless @page.errors[:body].blank?}"}
     = f.label '本文', class: 'control-label'
     .controls
       = f.text_area :body, class: 'text_field', rows: 10, style: 'width: 80%'
-  .control-group
+
+  %div{class: "control-group #{'error' unless @page.errors[:author_id].blank?}"}
     = f.label '作成者', class: 'control-label'
     .controls
       = f.collection_select :author_id, @users, :id, :name
-  .control-group
+
+  %div{class: "control-group #{'error' unless @page.errors[:published].blank?}"}
     = f.label '公開する', class: 'control-label'
     .controls
       = f.check_box :published
-  .control-group
+
+  %div{class: "control-group #{'error' unless @page.errors[:published_at].blank?}"}
     = f.label '公開日時', class: 'control-label'
     .controls
       = f.datetime_select :published_at, {}, class: 'span2'
+
   .form-actions
     = f.submit '保存', class: 'btn btn-primary'
     = link_to 'キャンセル', pages_path, class: 'btn'
