--- a/app/views/layouts/kvp.html.erb
+++ b/app/views/layouts/kvp.html.erb
@@ -21,6 +21,7 @@
     <%= stylesheet_link_tag "application", media: "all" %>
     <%= stylesheet_link_tag "/kvp/css/kvp-style.css", media: "all" %>
 
+    <% if Rails.env.production? %>
     <script type="text/javascript">
       var id = 'UA-29579749-1';
       if(id) {
@@ -35,6 +36,7 @@
         })();
       }
     </script>
+    <% end %>
 
     <link href="/kvp/img/favicon.ico" rel="shortcut icon">
 
