Arrange kvp files

--- a/app/views/layouts/kvp.html.erb
+++ b/app/views/layouts/kvp.html.erb
@@ -42,7 +42,7 @@
 
     <!-- Facebook用 -->
     <meta property="og:type"  content="article"></meta>
-    <meta property="og:image" content="http://www.kosen-venture.com/kvp/img/facebook_thumb.jpg"></meta>
+    <meta property="og:image" content="http://www.kosen-venture.com/kvp/img/common/facebook_thumb.jpg"></meta>
     <meta property="og:site_name" content="高専ベンチャー">
     <meta property="fb:admins" content="100000748651715" />
 
@@ -71,7 +71,7 @@
         <!-- navigation menu for tablet and desktop -->
         <div class="row hidden-phone" style="margin-top:0">
             <div class="span5">
-              <a href="/"><img src="/kvp/img/logo.png" width="320"></a>
+              <a href="/"><img src="/kvp/img/common/logo.png" width="320"></a>
               <br>
               <div class="block clearfix">
                  <div id="sns_facebook"></div>
@@ -91,7 +91,7 @@
         <!-- navigation menu for phone -->
         <div class="row visible-phone" style="margin-top:0">
             <div class="span12">
-              <a href="/"><img src="/kvp/img/logo.png"></a>
+              <a href="/"><img src="/kvp/img/common/logo.png"></a>
             </div>
             <div class="span12">
           <div class="btn-group" style="float:right; margin-right: 30px;">
@@ -100,10 +100,10 @@
                     <li><a href="/">トップ</a></li>
                     <li class="divider"></li>
                     <li><a href="/about">概要</a></li>
-                    <li><a href="/event">イベント</a></li>
+                    <li><a href="/events">イベント</a></li>
                     <li><a href="/news">ニュース</a></li>
                     <li><a href="/contact">お問い合わせ</a></li>
-                    <li><a href="/people">運営</a></li>
+                    <li><a href="/staff">運営</a></li>
                 </ul>
               </div>
             </div>
@@ -120,12 +120,12 @@
 
     <div id="footer_phone" class="visible-phone">
       <div style="width:100%; height:200px;"></div>
-      <img src="/kvp/img/copyright.png" style="background-color: #000; width:100%; height:20px; background-repeat: no-repeat; background-position:center top;"></div>
+      <img src="/kvp/img/common/copyright.png" style="background-color: #000; width:100%; height:20px; background-repeat: no-repeat; background-position:center top;"></div>
 
     </div>
 
     <div id="footer" class="hidden-phone">
-      <div style="height:200px;color:white; background-image: url('/kvp/img/bottom_bg.png');background-repeat: repeat-x;">
+      <div style="height:200px;color:white; background-image: url('/kvp/img/common/bottom_bg.png');background-repeat: repeat-x;">
         <div class="container">
           <br>
           <div class="row">
@@ -134,10 +134,10 @@
               <ul>
                 <li><a href="/">トップページ</a></li>
                 <li><a href="/about">概要</a></li>
-                <li><a href="/event">イベント</a></li>
+                <li><a href="/events">イベント</a></li>
                 <li><a href="/news">ニュース</a></li>
                 <li><a href="/contact">連絡</a></li>
-                <li><a href="/people">運営者について</a></li>
+                <li><a href="/staff">運営者について</a></li>
               </ul>
             </div>
             <div class="span4" style="border-right: 1px solid #fff;">
@@ -176,7 +176,7 @@
           </div>
         </div>
       </div>
-      <div style="background-color: #000; background-image: url('/kvp/img/copyright.png'); height:20px; background-repeat: no-repeat; background-position:center top;"></div>
+      <div style="background-color: #000; background-image: url('/kvp/img/common/copyright.png'); height:20px; background-repeat: no-repeat; background-position:center top;"></div>
     </div>
 
     <%= javascript_include_tag "application" %>
