--- a/public/kvp/css/kvp-style.css
+++ b/public/kvp/css/kvp-style.css
@@ -4,6 +4,7 @@
  * 基本CSS
  */
 
+/* メニュー */
 #menu_contact{
   width: 77px;
   height: 62px;
@@ -65,9 +66,10 @@
     background-repeat: no-repeat;
 }
 
+/* フッター */
 #footer {
 	width: 100%;
-	height: 220px;
+	height: 240px;
 	bottom: 0;
 	position: relative;
 }
@@ -77,7 +79,6 @@
 	bottom: 0;
 	position: relative;
 }
-
 #footer h4{
     color: #ccc;
 }
@@ -111,7 +112,7 @@ body {
   padding-bottom: 275px;
 }
 
-.heading{
+h3 {
   padding: 10px 0px 0px 50px ;
   background-image: url('../img/common/h_bg.png');
   background-position: top left;
@@ -123,7 +124,7 @@ body {
 }
 
 @media (max-width: 640px) {
-    .heading {
+    h3 {
   	  font-size: 15px;
       padding: 10px 0px 0px 20px ;
       line-height: 0px;
@@ -139,7 +140,7 @@ body {
 }
 
 @media (max-width: 979px) {
-	.heading {
+	h3 {
 	  font-size: 18px;
 	  padding: 1px 0px 0px 30px ;
 	}
@@ -179,7 +180,7 @@ table.table-company td{
 }
 
 .row{
-  margin-top: 30px;
+  margin-top: 5px;
 }
 
 .spanm{
