--- a/app/views/admin/users/_form.html.haml
+++ b/app/views/admin/users/_form.html.haml
@@ -1,16 +1,31 @@
 = form_for @user, :html => { :class => 'form-horizontal' } do |f|
-  .control-group
-    = f.label :name, :class => 'control-label'
+  - if @user.errors.any?
+    .alert.alert-block.fade.in.alert-error
+      %h4 エラー
+      %ul
+        - @user.errors.full_messages.each do |msg|
+          %li= msg
+
+  %div{class: "control-group #{'error' unless @user.errors[:name].blank?}"}
+    = f.label 'ユーザ名', class: 'control-label'
     .controls
-      = f.text_field :name, :class => 'text_field'
-  .control-group
-    = f.label :real_name, :class => 'control-label'
+      = f.text_field :name, class: 'input-large'
+
+  %div{class: "control-group #{'error' unless @user.errors[:real_name].blank?}"}
+    = f.label '表示名', class: 'control-label'
     .controls
-      = f.text_field :real_name, :class => 'text_field'
-  .control-group
-    = f.label :password_digest, :class => 'control-label'
+      = f.text_field :real_name, class: 'input-large'
+
+  %div{class: "control-group #{'error' unless @user.errors[:password].blank?}"}
+    = f.label 'パスワード', class: 'control-label'
     .controls
-      = f.text_field :password_digest, :class => 'text_field'
+      = f.password_field :password, class: 'input-large'
+
+  %div{class: "control-group #{'error' unless @user.errors[:password_confirmation].blank?}"}
+    = f.label '確認入力', class: 'control-label'
+    .controls
+      = f.password_field :password_confirmation, class: 'input-large'
+
   .form-actions
-    = f.submit nil, :class => 'btn btn-primary'
-    = link_to t('.cancel', :default => t("helpers.links.cancel")), users_path, :class => 'btn'
+    = f.submit '登録', class: 'btn btn-primary'
+    = link_to 'キャンセル', users_path, class: 'btn'
