--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -1,25 +1,18 @@
-- model_class = User
 .page-header
-  %h1=t '.title', :default => model_class.model_name.human.pluralize
+  %h1 ユーザ一覧
+
 %table.table.table-striped
   %thead
     %tr
-      %th= model_class.human_attribute_name(:id)
-      %th= model_class.human_attribute_name(:name)
-      %th= model_class.human_attribute_name(:real_name)
-      %th= model_class.human_attribute_name(:password_digest)
-      %th= model_class.human_attribute_name(:created_at)
-      %th=t '.actions', :default => t("helpers.actions")
+      %th 操作
+      %th ユーザ名
+      %th 表示名
   %tbody
     - @users.each do |user|
       %tr
-        %td= link_to user.id, user_path(user)
-        %td= user.name
-        %td= user.real_name
-        %td= user.password_digest
-        %td=l user.created_at
         %td
-          = link_to t('.edit', :default => t("helpers.links.edit")), edit_user_path(user), :class => 'btn btn-mini'
-          = link_to t('.destroy', :default => t("helpers.links.destroy")), user_path(user), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-mini btn-danger'
-
-= link_to t('.new', :default => t("helpers.links.new")), new_user_path, :class => 'btn btn-primary'
+          = link_to '削除', user_path(user), method: :delete,
+            data: { confirm: "ユーザ(#{user.real_name})を削除してよろしいですか？" }, class: 'btn btn-mini btn-danger'
+          = link_to '編集', edit_user_path(user), class: 'btn btn-mini btn-success'
+        %td= link_to user.name, edit_user_path(user)
+        %td= user.real_name
