--- a/app/views/admin/dashboard.html.haml
+++ b/app/views/admin/dashboard.html.haml
@@ -6,7 +6,7 @@
   %li= icon_link_to "一覧", pages_path, 'icon-list'
   %li= icon_link_to "作成", new_page_path, 'icon-pencil'
 
-  %li.nav-header カテゴリ管理
+  %li.nav-header ページカテゴリ管理
   %li= icon_link_to "一覧", page_categories_path, 'icon-list'
   %li= icon_link_to "作成", new_page_category_path, 'icon-plus'
 
