--- a/app/views/admin/page_categories/_form.html.haml
+++ b/app/views/admin/page_categories/_form.html.haml
@@ -1,12 +1,19 @@
 = form_for @page_category, :html => { :class => 'form-horizontal' } do |f|
-  .control-group
+  - if @page_category.errors.any?
+    .alert.alert-block.fade.in.alert-error
+      %h4 エラー
+      %ul
+        - @page_category.errors.full_messages.each do |msg|
+          %li= msg
+
+  %div{class: "control-group #{'error' unless @page_category.errors[:name].blank?}"}
     = f.label :name, :class => 'control-label'
     .controls
       = f.text_field :name, :class => 'text_field'
-  .control-group
+  %div{class: "control-group #{'error' unless @page_category.errors[:title].blank?}"}
     = f.label :title, :class => 'control-label'
     .controls
       = f.text_field :title, :class => 'text_field'
   .form-actions
     = f.submit nil, :class => 'btn btn-primary'
-    = link_to t('.cancel', :default => t("helpers.links.cancel")), page_categories_path, :class => 'btn'
+    = link_to 'キャンセル', page_categories_path, :class => 'btn'
