--- a/app/views/admin/page_categories/edit.html.haml
+++ b/app/views/admin/page_categories/edit.html.haml
@@ -1,4 +1,3 @@
-- model_class = PageCategory
 .page-header
-  %h1=t '.title', :default => [:'helpers.titles.edit', 'Edit %{model}'], :model => model_class.model_name.human
+  %h2 ページカテゴリの編集
 = render :partial => "form"
