--- a/app/views/admin/page_categories/index.html.haml
+++ b/app/views/admin/page_categories/index.html.haml
@@ -1,23 +1,18 @@
-- model_class = PageCategory
 .page-header
-  %h1=t '.title', :default => model_class.model_name.human.pluralize
+  %h1 ページカテゴリ一覧
 %table.table.table-striped
   %thead
     %tr
-      %th= model_class.human_attribute_name(:id)
-      %th= model_class.human_attribute_name(:name)
-      %th= model_class.human_attribute_name(:title)
-      %th= model_class.human_attribute_name(:created_at)
-      %th=t '.actions', :default => t("helpers.actions")
+      %th 操作
+      %th カテゴリ名
+      %th カテゴリ表示名
   %tbody
     - @page_categories.each do |page_category|
       %tr
-        %td= link_to page_category.id, page_category_path(page_category)
+        %td
+          = link_to '削除', page_category_path(page_category),
+            method: :delete, data: { confirm: '削除してよろしいですか？' },
+            class: 'btn btn-mini btn-danger'
+          = link_to '編集', edit_page_category_path(page_category), class: 'btn btn-mini btn-success'
         %td= page_category.name
         %td= page_category.title
-        %td=l page_category.created_at
-        %td
-          = link_to t('.edit', :default => t("helpers.links.edit")), edit_page_category_path(page_category), :class => 'btn btn-mini'
-          = link_to t('.destroy', :default => t("helpers.links.destroy")), page_category_path(page_category), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-mini btn-danger'
-
-= link_to t('.new', :default => t("helpers.links.new")), new_page_category_path, :class => 'btn btn-primary'
