--- a/app/views/layouts/kvp.html.erb
+++ b/app/views/layouts/kvp.html.erb
@@ -40,7 +40,7 @@
     </script>
     <% end %>
 
-    <link href="/kvp/img/favicon.ico" rel="shortcut icon">
+    <link href="/kvp/img/common/favicon.ico" rel="shortcut icon">
 
     <!-- Facebook用 -->
     <meta property="og:type"  content="article"></meta>
