Change assets name

--- a/app/views/layouts/kvp.html.erb
+++ b/app/views/layouts/kvp.html.erb
@@ -20,7 +20,7 @@
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
     <![endif]-->
 
-    <%= stylesheet_link_tag "application", media: "all" %>
+    <%= stylesheet_link_tag "kvp", media: "all" %>
     <%= stylesheet_link_tag "/kvp/css/kvp-style.css", media: "all" %>
 
     <% if Rails.env.production? %>
@@ -179,7 +179,7 @@
       <div style="background-color: #000; background-image: url('/kvp/img/common/copyright.png'); height:20px; background-repeat: no-repeat; background-position:center top;"></div>
     </div>
 
-    <%= javascript_include_tag "application" %>
+    <%= javascript_include_tag "kvp" %>
     <%= javascript_include_tag "/kvp/js/jquery.socialbutton-1.8.1.js" %>
 
     <script type="text/javascript">
