--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -9,7 +9,7 @@
     / Le HTML5 shim, for IE6-8 support of HTML elements
     /[if lt IE 9]
       = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js"
-    = stylesheet_link_tag "application", :media => "all"
+    = stylesheet_link_tag "admin", :media => "all"
 
   %body
     .navbar.navbar-fluid-top.navbar-inverse
@@ -42,4 +42,4 @@
       %footer
         %p &copy; Kosen Venture Project 2013
 
-    = javascript_include_tag "application"
+    = javascript_include_tag "admin_page"
