--- a/app/views/admin/users/_form.html.haml
+++ b/app/views/admin/users/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @user, :html => { :class => 'form-horizontal' } do |f|
+= form_for [:admin, @user], :html => { :class => 'form-horizontal' } do |f|
   - if @user.errors.any?
     .alert.alert-block.fade.in.alert-error
       %h4 エラー
@@ -28,4 +28,4 @@
 
   .form-actions
     = f.submit '登録', class: 'btn btn-primary'
-    = link_to 'キャンセル', users_path, class: 'btn'
+    = link_to 'キャンセル', admin_users_path, class: 'btn'
