--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -11,8 +11,8 @@
     - @users.each do |user|
       %tr
         %td
-          = link_to '削除', user_path(user), method: :delete,
+          = link_to '削除', admin_user_path(user), method: :delete,
             data: { confirm: "ユーザ(#{user.real_name})を削除してよろしいですか？" }, class: 'btn btn-mini btn-danger'
-          = link_to '編集', edit_user_path(user), class: 'btn btn-mini btn-success'
-        %td= link_to user.name, edit_user_path(user)
+          = link_to '編集', edit_admin_user_path(user), class: 'btn btn-mini btn-success'
+        %td= link_to user.name, edit_admin_user_path(user)
         %td= user.real_name
