--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -24,8 +24,8 @@
             .container.nav-collapse
               %ul.nav
                 %li= icon_link_to "ダッシュボード", admin_path, 'icon-white icon-home'
-                %li= icon_link_to "ページ管理", pages_path, 'icon-white icon-file'
-                %li= icon_link_to 'ユーザ管理', users_path, 'icon-white icon-user'
+                %li= icon_link_to "ページ管理", admin_pages_path, 'icon-white icon-file'
+                %li= icon_link_to 'ユーザ管理', admin_users_path, 'icon-white icon-user'
               %ul.nav.pull-right
                 %li= icon_link_to 'ログアウト', admin_session_path, 'icon-white icon-off', method: :delete
 
