--- a/app/views/layouts/admin/users.html.haml
+++ b/app/views/layouts/admin/users.html.haml
@@ -3,8 +3,8 @@
 
 - content_for :sidebar do
   %li.nav-header ユーザ管理
-  %li= icon_link_to "一覧", users_path, 'icon-list'
-  %li= icon_link_to "登録", new_user_path, 'icon-plus'
+  %li= icon_link_to "一覧", admin_users_path, 'icon-list'
+  %li= icon_link_to "登録", new_admin_user_path, 'icon-plus'
 
 - content_for :main do
   = yield
