Implement Site Config

--- a/app/views/admin/admin/dashboard.html.haml
+++ b/app/views/admin/admin/dashboard.html.haml
@@ -14,5 +14,7 @@
   %li= icon_link_to "一覧", admin_users_path, 'icon-list'
   %li= icon_link_to "登録", new_admin_user_path, 'icon-plus'
 
+  %li.nav-header サイト設定
+  %li= icon_link_to "サイト設定", admin_site_config_path, 'icon-cog'
 .page-header
   %h1 高専ベンチャー 管理ページ
