--- a/app/views/admin/pages/_form.html.haml
+++ b/app/views/admin/pages/_form.html.haml
@@ -42,6 +42,7 @@
     = f.label '本文', class: 'control-label'
     .controls
       = f.text_area :body, class: 'text_field', rows: 20, style: 'width: 100%'
+      %pre{id: 'body_editor', style: 'position: relative; height: 600px; padding: 0'}
 
   %div{class: "control-group #{'error' unless @page.errors[:author_id].blank?}"}
     = f.label '作成者', class: 'control-label'
