--- a/app/views/admin/pages/_form.html.haml
+++ b/app/views/admin/pages/_form.html.haml
@@ -55,7 +55,7 @@
       = f.check_box :published
 
   %div{class: "control-group #{'error' unless @page.errors[:priority].blank?}"}
-    = f.label 'ページ順位', class: 'control-label'
+    = f.label '重要度', class: 'control-label'
     .controls
       = f.range_field :priority, class: 'input-large', min: 0.1, max: 1.0, step: 0.05
       %span#page_priority_disp= @page.priority
