--- a/app/views/layouts/kvp.html.erb
+++ b/app/views/layouts/kvp.html.erb
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <% if /iPad/ =~ request.env["HTTP_USER_AGENT"] %>
-      <meta name="viewport" content="width=1024px; initial-scale=0.77; maximum-scale=2.0;">
+      <meta name="viewport" content="width=1024px, initial-scale=0.77, maximum-scale=2.0">
     <% else %>
-      <meta name="viewport" content="width=1024px; initial-scale=0.5; maximum-scale=1.0;">
+      <meta name="viewport" content="width=1024px, initial-scale=0.5, maximum-scale=1.0">
     <% end %>
 
     <title><%= site_title %></title>
@@ -43,18 +43,18 @@
     <link href="/kvp/img/common/favicon.ico" rel="shortcut icon">
 
     <!-- Facebook用 -->
-    <meta property="og:type"  content="article"></meta>
-    <meta property="og:image" content="http://www.kosen-venture.com/kvp/img/common/facebook_thumb.jpg"></meta>
-    <meta property="og:site_name" content="高専ベンチャー">
+    <meta property="og:type"  content="article" />
+    <meta property="og:image" content="http://www.kosen-venture.com/kvp/img/common/facebook_thumb.jpg" />
+    <meta property="og:site_name" content="高専ベンチャー" />
     <meta property="fb:admins" content="100000748651715" />
     <% unless @fb_ogp %>
-      <meta property="og:title" content="高専ベンチャー"></meta>
-      <meta property="og:url"   content="http://www.kosen-venture.com/"></meta>
-      <meta property="og:description" content="高専ベンチャーは、高専生の優れた専門性や技術に対する純粋さを世界に発信していくことで、高専生が都内や海外で活躍する機会と選択肢を提供することをミッションとしています。">
+      <meta property="og:title" content="高専ベンチャー" />
+      <meta property="og:url"   content="http://www.kosen-venture.com/" />
+      <meta property="og:description" content="高専ベンチャーは、高専生の優れた専門性や技術に対する純粋さを世界に発信していくことで、高専生が都内や海外で活躍する機会と選択肢を提供することをミッションとしています。" />
     <% else %>
-      <meta property="og:title" content="<%= @fb_ogp[:title] %>"></meta>
-      <meta property="og:url"   content="http://www.kosen-venture.com<%= @fb_ogp[:url] %>"></meta>
-      <meta property="og:description" content="<%= @fb_ogp[:description] %>">
+      <meta property="og:title" content="<%= @fb_ogp[:title] %>" />
+      <meta property="og:url"   content="http://www.kosen-venture.com<%= @fb_ogp[:url] %>" />
+      <meta property="og:description" content="<%= @fb_ogp[:description] %>" />
     <% end %>
     <!-- end -->
 
@@ -90,7 +90,7 @@
         <!-- navigation menu for phone -->
         <div class="row visible-phone" style="margin-top:0">
             <div class="span12">
-              <a href="/"><img src="/kvp/img/common/logo.png"></a>
+              <a href="/"><img src="/kvp/img/common/logo.png" /></a>
             </div>
             <div class="span12">
           <div class="btn-group" style="float:right; margin-right: 30px;">
@@ -120,7 +120,7 @@
 
     <div id="footer_phone" class="visible-phone">
       <div style="width:100%; height:200px;"></div>
-      <img src="/kvp/img/common/copyright.png" style="background-color: #000; width:100%; height:20px; background-repeat: no-repeat; background-position:center top;"></div>
+      <img src="/kvp/img/common/copyright.png" style="background-color: #000; width:100%; height:20px; background-repeat: no-repeat; background-position:center top;" /></div>
 
     </div>
 
