--- a/app/views/shared/_entry_form.html.haml
+++ b/app/views/shared/_entry_form.html.haml
@@ -1,30 +1,46 @@
 - @entry = EventEntry.new unless @entry
 
-= form_for @entry, url: '', remote: true, html: { class: 'form-horizontal' } do |f|
+<a name="entry_form"></a>
+
+.alert.alert-block.fade.in.alert-success.hide#success_message
+  %h4 エントリー完了
+  %p
+    エントリーを受け付けました。
+  %p
+    まもなく連絡先メールアドレスに確認メールが届きますので、ご確認ください。
+  %p
+    エントリーに関してのお問い合わせは、
+    = link_to '「お問い合わせフォーム」', contact_path
+    までお願いいたします。
+
+= form_for @entry, url: event_entry_path, remote: true,
+  html: { class: 'form-horizontal' } do |f|
+
   %legend エントリーされる方は、以下のフォームを記入してエントリーしてください。
   %p ※個人情報は、エントリー選考や今後のイベントの案内等、適切な範囲内で使用します。
-  - if @entry.errors.any?
-    .alert.alert-block.fade.in.alert-error
-      %h4 エラー
-      %ul
-        - @entry.errors.full_messages.each do |msg|
-          %li= msg
 
-  %div{id: 'name_kanji', class: "control-group #{'error' unless @entry.errors[:name_kanji].blank?}"}
+  .alert.alert-block.fade.in.alert-error.hide#error_block
+    %h4 エラーがあります
+    %ul#errors_ul
+
+  .control-group#name_kanji
     %label.control-label
       名前（漢字）
       %span.label.label-important 必須
     .controls
-      = f.text_field :name_kanji, class: 'input-large', placeholder: '例）高専 太郎'
+      = f.text_field :name_kanji, class: 'input-large',
+        placeholder: '例）高専 太郎'
+      %span#error_msg
 
-  %div{id:'name_kana', class: "control-group #{'error' unless @entry.errors[:name_kana].blank?}"}
+  .control-group#name_kana
     %label.control-label
       名前（ひらがな）
       %span.label.label-important 必須
     .controls
-      = f.text_field :name_kana, class: 'input-large', placeholder: '例）こうせん たろう'
+      = f.text_field :name_kana, class: 'input-large',
+        placeholder: '例）こうせん たろう'
 
-  %div{id:'sexial', class: "control-group #{'error' unless @entry.errors[:sexial].blank?}"}
+  .control-group#sexial
     %label.control-label
       性別
       %span.label.label-important 必須
@@ -35,14 +51,16 @@
         = f.radio_button :sexial, '女性', class: 'input-small'
         女性
 
-  %div{id:'birthday', class: "control-group #{'error' unless @entry.errors[:birthday].blank?}"}
+  .control-group#birthday
     %label.control-label
       生年月日
       %span.label.label-important 必須
     .controls
-      = f.date_select :birthday, { start_year: Time.now.year - 30, end_year: Time.now.year - 15 }, class: 'input-small'
+      = f.date_select :birthday,
+        { start_year: Time.now.year - 30, end_year: Time.now.year - 15 },
+        class: 'input-small'
 
-  %div{id:'nct', class: "control-group #{'error' unless @entry.errors[:nct].blank?}"}
+  .control-group#nct
     %label.control-label
       在籍高専
       %span.label.label-important 必須
@@ -52,14 +70,15 @@
         class: 'input-xlarge'
 
 
-  %div{id:'major', class: "control-group #{'error' unless @entry.errors[:major].blank?}"}
+  .control-group#major
     %label.control-label
       所属学科
       %span.label.label-important 必須
     .controls
-      = f.text_field :major, class: 'input-xlarge', placeholder: '例）電子情報工学科'
+      = f.text_field :major, class: 'input-xlarge',
+        placeholder: '例）電子情報工学科'
 
-  %div{id:'grade', class: "control-group #{'error' unless @entry.errors[:grade].blank?}"}
+  .control-group#grade
     %label.control-label
       学年
       %span.label.label-important 必須
@@ -68,7 +87,7 @@
         { include_blank: '学年を選択してください' },
         class: 'input-normal'
 
-  %div{id:'email', class: "control-group #{'error' unless @entry.errors[:email].blank?}"}
+  .control-group#email
     %label.control-label
       連絡先メールアドレス
       %span.label.label-important 必須
@@ -76,7 +95,7 @@
       = f.email_field :email, class: 'input-xlarge',
         placeholder: '例）kosen.tarou@kosen-venture.com'
 
-  %div{id:'twitter', class: "control-group #{'error' unless @entry.errors[:twitter].blank?}"}
+  .control-group#twitter
     %label.control-label
       Twitter ID
       %span.label.label-info 任意
@@ -86,7 +105,7 @@
         = f.text_field :twitter, class: 'input-medium',
           placeholder: '例）KosenVenture'
 
-  %div{id:'facebook', class: "control-group #{'error' unless @entry.errors[:facebook].blank?}"}
+  .control-group#facebook
     %label.control-label
       Facebook URL
       %span.label.label-info 任意
@@ -94,7 +113,7 @@
       = f.text_field :facebook, class: 'input-xxlarge',
         placeholder: '例）https://www.facebook.com/kosenventure'
 
-  %div{id:'github', class: "control-group #{'error' unless @entry.errors[:github].blank?}"}
+  .control-group#github
     %label.control-label
       Github ID
       %span.label.label-info 任意
@@ -103,7 +122,7 @@
         placeholder: '例）KosenVenture'
       %p.help-block ※アカウントをお持ちでも、知られたく無い場合などは空欄で構いません。
 
-  %div{id:'appeal', class: "control-group #{'error' unless @entry.errors[:appeal].blank?}"}
+  .control-group#appeal
     %label.control-label
       自由記入欄
       %span.label.label-important 必須
@@ -111,7 +130,7 @@
       = f.text_area :appeal, class: 'input-xxlarge', rows: 8,
         placeholder: '自己アピール/意気込み/質問/応募動機など。字数に制限はありません。'
 
-  %div{id:'myproduct', class: "control-group #{'error' unless @entry.errors[:myproduct].blank?}"}
+  .control-group#myproduct
     %label.control-label
       Web上にある作品・ブログなど
       %span.label.label-info 任意
@@ -119,7 +138,7 @@
       = f.text_area :myproduct, class: 'input-xxlarge', rows: 5,
         placeholder: 'Web上にある過去に開発した自分の作品・ブログなどがあれば、記入してください。'
 
-  %div{id:'question1', class: "control-group #{'error' unless @entry.errors[:question1].blank?}"}
+  .control-group#question1
     %label.control-label
       アンケート
       %span.label.label-info 任意
@@ -130,7 +149,7 @@
           = f.check_box :question1, { name: "event_entry[question1][]" }, s, ''
           = s
 
-  %div{id:'mail_ok', class: "control-group #{'error' unless @entry.errors[:mail_ok].blank?}"}
+  .control-group#mail_ok
     %label.control-label
       今後のお知らせ
       %span.label.label-info 任意
@@ -140,7 +159,6 @@
           今後、高専ベンチャーからの案内を差し上げてもよろしいですか？
         = f.check_box :mail_ok
         「高専ベンチャー」からのお知らせを受け取る
-
   .form-actions
     = f.submit 'エントリー', class: 'btn btn-primary',
       confirm: 'エントリーを送信します。よろしいですか？'
