--- a/app/views/admin/admin/dashboard.html.haml
+++ b/app/views/admin/admin/dashboard.html.haml
@@ -10,6 +10,14 @@
   %li= icon_link_to "一覧", admin_page_categories_path, 'icon-list'
   %li= icon_link_to "作成", new_admin_page_category_path, 'icon-plus'
 
+  %li.nav-header 記事管理
+  %li= icon_link_to "一覧", admin_blog_posts_path, 'icon-list'
+  %li= icon_link_to "作成", new_admin_blog_post_path, 'icon-pencil'
+
+  %li.nav-header 記事カテゴリ管理
+  %li= icon_link_to "一覧", admin_blog_categories_path, 'icon-list'
+  %li= icon_link_to "作成", new_admin_blog_category_path, 'icon-plus'
+
   %li.nav-header ユーザ管理
   %li= icon_link_to "一覧", admin_users_path, 'icon-list'
   %li= icon_link_to "登録", new_admin_user_path, 'icon-plus'
