--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -25,6 +25,7 @@
               %ul.nav
                 %li= icon_link_to "ダッシュボード", admin_path, 'icon-white icon-home'
                 %li= icon_link_to "ページ管理", admin_pages_path, 'icon-white icon-file'
+                %li= icon_link_to "記事管理", admin_blog_posts_path, 'icon-white icon-pencil'
                 %li= icon_link_to 'ユーザ管理', admin_users_path, 'icon-white icon-user'
                 %li= icon_link_to 'サイト管理', admin_site_config_path, 'icon-white icon-globe'
               %ul.nav.pull-right
@@ -42,6 +43,14 @@
               %li.nav-header ページカテゴリ管理
               %li= icon_link_to "一覧", admin_page_categories_path, 'icon-list'
               %li= icon_link_to "作成", new_admin_page_category_path, 'icon-plus'
+
+              %li.nav-header 記事管理
+              %li= icon_link_to "一覧", admin_blog_posts_path, 'icon-list'
+              %li= icon_link_to "作成", new_admin_blog_post_path, 'icon-pencil'
+
+              %li.nav-header 記事カテゴリ管理
+              %li= icon_link_to "一覧", admin_blog_categories_path, 'icon-list'
+              %li= icon_link_to "作成", new_admin_blog_category_path, 'icon-plus'
 
               %li.nav-header ユーザ管理
               %li= icon_link_to "一覧", admin_users_path, 'icon-list'
