--- a/app/views/layouts/kvp.html.erb
+++ b/app/views/layouts/kvp.html.erb
@@ -198,7 +198,6 @@
         });
         $('#sns_tweet').socialbutton('twitter', {
           button: 'horizontal',
-          url: 'http://www.kosen-venture.com',
           encoded: true,
           text: '',
           lang: 'ja',
@@ -206,9 +205,7 @@
         });
         $('#sns_hatena').socialbutton('hatena', {
           button: 'horizontal',
-          url: 'http://www.kosen-venture.com',
-          encoded: true,
-          title: '高専ベンチャー'
+          encoded: true
         });
     });
     </script>
