Add skype field

--- a/app/views/entry_mailer/user.text.erb
+++ b/app/views/entry_mailer/user.text.erb
@@ -26,6 +26,7 @@
 【学年】<%= @entry.grade %>
 
 【連絡先メールアドレス】<%= @entry.email %>
+【Skype ID】<%= @entry.skype %>
 【Twitter ID】<%= @entry.twitter %>
 【Facebook URL】<%= @entry.facebook %>
 【Github ID】<%= @entry.github %>
