--- a/app/views/entry_mailer/staff.text.erb
+++ b/app/views/entry_mailer/staff.text.erb
@@ -16,6 +16,7 @@
 【学年】<%= @entry.grade %>
 
 【連絡先メールアドレス】<%= @entry.email %>
+【Skype ID】<%= @entry.skype %>
 【Twitter ID】<%= @entry.twitter %>
 【Facebook URL】<%= @entry.facebook %>
 【Github ID】<%= @entry.github %>
