Add file uploader menu

--- a/app/views/admin/file_uploader/index.html.haml
+++ b/app/views/admin/file_uploader/index.html.haml
@@ -1,5 +1,6 @@
-%h1 ファイル管理
-%h3= ['/files', params[:path]].compact.join '/'
+.page-header
+  %h1 ファイル管理
+  %h3= ['/files', params[:path]].compact.join '/'
 
 
 
