--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -26,6 +26,7 @@
                 %li= icon_link_to "ダッシュボード", admin_path, 'icon-white icon-home'
                 %li= icon_link_to "ページ管理", admin_pages_path, 'icon-white icon-file'
                 %li= icon_link_to "記事管理", admin_blog_posts_path, 'icon-white icon-pencil'
+                %li= icon_link_to "ファイル管理", admin_file_uploader_path, 'icon-white icon-folder-close'
                 %li= icon_link_to 'ユーザ管理', admin_users_path, 'icon-white icon-user'
                 %li= icon_link_to 'サイト管理', admin_site_config_path, 'icon-white icon-globe'
               %ul.nav.pull-right
@@ -51,6 +52,9 @@
               %li.nav-header 記事カテゴリ管理
               %li= icon_link_to "一覧", admin_blog_categories_path, 'icon-list'
               %li= icon_link_to "作成", new_admin_blog_category_path, 'icon-plus'
+
+              %li.nav-header ファイル管理
+              %li= icon_link_to "管理", admin_file_uploader_path, 'icon-folder-close'
 
               %li.nav-header ユーザ管理
               %li= icon_link_to "一覧", admin_users_path, 'icon-list'
