Fix entry mail message

--- a/app/views/entry_mailer/staff.text.erb
+++ b/app/views/entry_mailer/staff.text.erb
@@ -16,11 +16,11 @@
 【学年】<%= @entry.grade %>
 
 【連絡先メールアドレス】<%= @entry.email %>
-【Twitter ID】<%= @entry.twitter %>
+【Twitter ID】http://twitter.com/<%= @entry.twitter %>
 【Facebook URL】<%= @entry.facebook %>
-【Github ID】<%= @entry.github %>
+【Github ID】http://github.com/<%= @entry.github %>
 
-【自由記入欄】
+【応募動機・意気込み】
 <%= @entry.appeal %>
 
 【Web上にある作品・ブログなど】
