--- a/app/views/entry_mailer/user.text.erb
+++ b/app/views/entry_mailer/user.text.erb
@@ -9,7 +9,7 @@
 
 このあと近日中に本メールアドレス宛へ、
 運営スタッフから直接ご連絡を差し上げますのでしばらくお待ちください。
-
+※近日中に連絡が無い場合、お手数ですが下記の問い合わせ先までご連絡ください。
 
 ◆　エントリー内容　◆
 
@@ -30,7 +30,7 @@
 【Facebook URL】<%= @entry.facebook %>
 【Github ID】<%= @entry.github %>
 
-【自由記入欄】
+【応募動機・意気込み】
 <%= @entry.appeal %>
 
 【Web上にある作品・ブログなど】
